Does removing .page height:100% fix sidebar's layout issues on smaller displays?

--- a/site.css
+++ b/site.css
@@ -47,7 +47,6 @@ html, body {
 
 .page {
     flex: 8 1;
-    height: 100%;
     bottom: 0;
 
 
